--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1"
 bimap = "0.6"
 counter = "0.5"
 itertools = "0.10"
+lazy_static = "1.4"
 pest = "2.0"
 pest_derive = "2.0"
 regex = "1"
